Fixed whitespace massacre

--- a/navigation.css
+++ b/navigation.css
@@ -2,11 +2,11 @@
 div#mainNavigationMenu {
     border: 1px solid black;
     position: absolute;
+    top:100px;
     width: 200px;
 }
 
 div#mainNavigationMenu ul li {
-    padding-left: 500px;
     list-style: none;
 }
 
@@ -23,9 +23,13 @@ div#mainNavigationMenu li:hover {
  
 
 div#mainNavigationHeader {
-    position: absolute;
-    width: 200px;
+    position:absolute;
+    top:10px;
+    width:200px;
 }
 
 div#mainNavigationContacts {
+    position:absolute;
+    top:50px;
+    left: 30px;
 }
